tests/valid/module_test/main.nm
require "./some_module.nm";

abstract component Main {
    net A, B, C;

    R {
        value = "220";
        A: A;
        B: B;
    }

    R {
        value = "470";
        A: B;
        B: C;
    }

    R {
        value = "10k";
        A: C;
        B: A;
    }
}