tests/errors/abstract_component_no_pin_num.nm
abstract component Foo {
    pin A: input = 1;
    pin B: input = 2;
}